kubeconfiguration/4-ingress-controller.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haproxy-ingress
  namespace: cert-manager
spec:
  replicas: 3
  selector:
    matchLabels:
      app: haproxy-ingress
  template:
    metadata:
      labels:
        app: haproxy-ingress
    spec:
      hostNetwork: true
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: haproxy-ingress
              topologyKey: "kubernetes.io/hostname"
      serviceAccountName: haproxy-ingress
      containers:
        - name: haproxy-ingress
          image: haproxytech/kubernetes-ingress:3.0.6
          args:
            - --configmap=default/haproxy-ingress-config
            - --http-port=8080
            - --https-port=8443
            - --default-backend-service=default/nginx-service
            - --maps-dir=/etc/haproxy/maps
          ports:
            - name: http
              containerPort: 8080
              hostPort: 8080
            - name: https
              containerPort: 8443
              hostPort: 8443
          securityContext:
            runAsUser: 0
            runAsGroup: 0
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["NET_BIND_SERVICE"]
          volumeMounts:
            - name: maps-dir
              mountPath: /etc/haproxy/maps
      volumes:
        - name: maps-dir
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: haproxy-ingress
  namespace: cert-manager
spec:
  type: LoadBalancer
  selector:
    app: haproxy-ingress
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: haproxy
spec:
  controller: haproxy.org/ingress-controller

---
