kubeconfiguration/8-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mongo-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mongo-express
    ports:
    - protocol: TCP
      port: 27017
